# CPP-RType

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  clear.sh  run_client.sh  run_server.sh  run_tests.sh
.github/workflows/: CI.yml  Discord.yml
client/: CMakeLists.txt
client/includes/: MediatorClient.hpp  SubSystemsClient.hpp
client/includes/components/: Scene.hpp  __BASIC_COMPONENT__.HPP
client/includes/entities/: __BASIC_ENTITY__.HPP
client/includes/scene/: EnumScene.hpp  SceneManager.hpp
client/includes/systems/: Audio.hpp  EntityFactory.hpp  NetworkClient.hpp  NetworkTCP.hpp  NetworkUDP.hpp  Prediction.hpp  Window.hpp  __BASIC_SYS__.HPP
client/sources/: EntityFactory.cpp  Main.cpp  Mediator.cpp  MediatorClient.cpp  NetworkTCP.cpp  NetworkUDP.cpp  SceneManager.cpp  SubSystemsClient.cpp  SystemAudio.cpp  SystemNetworkClient.cpp  SystemPrediction.cpp  SystemWindow.cpp
common/includes/: AException.hpp  Network.hpp  RType.hpp  SubSystems.hpp
common/includes/components/: AComponent.hpp  AManager.hpp  Bullet.hpp  Collisions.hpp  Display.hpp  Events.hpp  Exception.hpp  IComponent.hpp  IManager.hpp  Life.hpp  Network.hpp  Physics.hpp  Sound.hpp  Type.hpp  Unremovable.hpp  Window.hpp  __BASIC_COMPONENT__.HPP
common/includes/entities/: AManager.hpp  ComponentManager.hpp  Exception.hpp  IManager.hpp  __BASIC_ENTITY__.HPP
common/includes/singleton/: ECManager.hpp
common/includes/systems/: AManager.hpp  ASystem.hpp  Collision.hpp  Damage.hpp  Exception.hpp  IManager.hpp  ISubSystem.hpp  ISystem.hpp  Movement.hpp  Network.hpp  Shooting.hpp  __BASIC_SYS__.HPP
common/sources/: ComponentAManager.cpp  EntityAManager.cpp  EntityComponentManager.cpp  Exception.cpp  SingletonECManager.cpp  SystemAManager.cpp
doc/: client.todo.md  client_spec.md  list_components.md  penseBeteAntoine.txt  protocol.rst  protocol.txt
server/: CMakeLists.txt
server/includes/: GameEngine.hpp  Mediator.hpp  Server.hpp
server/includes/components/: MethodeMob.hpp  NetworkServer.hpp  PlayerServer.hpp  TempComponents.hpp  __BASIC_COMPONENT__.HPP
server/includes/entities/: ILibMob.hpp  __BASIC_ENTITY__.HPP
server/includes/systems/: CheckCollisionServer.hpp  CheckEndGame.hpp  InterpretCollisionServer.hpp  LoadMethodeMob.hpp  MobServer.hpp  MovementPlayerServer.hpp  NetworkServer.hpp  PlayerAlive.hpp  ShootServer.hpp  SubSystemsServer.hpp  TimerGame.hpp  __BASIC_SYS__.HPP
server/libMobs/includes/: ILibMob.hpp  OtherMob.hpp  PlaneMob.hpp
server/libMobs/sources/: Makefile  OtherMob.cpp  PlaneMob.cpp
server/sources/: Client.cpp  GameEngine.cpp  Main.cpp  Mediator.cpp  Server.cpp  SubSystemServer.cpp  SubSystems.cpp  SystemCheckCollisionServer.cpp  SystemCheckEndGame.cpp  SystemInterpretCollisionServer.cpp  SystemLoadMethodeMob.cpp  SystemMobServer.cpp  SystemMovementPlayerServer.cpp  SystemNetwork.cpp  SystemNetworkServer.cpp  SystemPlayerAlive.cpp  SystemShootServer.cpp  SystemTimerGame.cpp
tests/: CMakeLists.txt  Main.cpp  conanfile.txt  note.rst
tests/client/: Network.test.cpp  System.test.cpp
tests/common/: EntityComponent.test.cpp
